--- a/.gitignore
+++ b/.gitignore
@@ -127,6 +127,7 @@ dist
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
+*.vsix
 
 # yarn v2
 .yarn/cache
@@ -134,3 +135,7 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# OS junk
+.DS_Store
+Thumbs.db
