--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
       {
         "command": "snowflakeDataOps.activate",
         "title": "Activate Snowflake DataOps Assistant"
+      },
+      {
+        "command": "snowflakeDataOps.selectEnvFile",
+        "title": "Select Environment File"
       }
     ]
   },
@@ -28,11 +32,13 @@
     "test": "npm run compile && node ./out/test/runTest.js"
   },
   "devDependencies": {
+    "@types/node": "^24.1.0",
     "@types/vscode": "^1.80.0",
-    "typescript": "^5.0.0",
-    "@vscode/test-electron": "^2.3.0"
+    "@vscode/test-electron": "^2.3.0",
+    "typescript": "^5.0.0"
   },
   "dependencies": {
+    "dotenv": "^17.2.1",
     "node-fetch": "^3.3.2"
   }
 }
