--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "types": ["vscode"]
+    "types": ["vscode", "node"]
   },
   "exclude": ["node_modules", ".vscode-test"]
 }
