--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "Snowflake DataOps Assistant",
   "description": "VS Code extension to automate and manage Snowflake infrastructure using Terraform, GitHub Actions, and Slack.",
   "version": "0.1.0",
+  "publisher": "kingtvarshin",
   "repository": {
     "type": "git",
     "url": "https://github.com/kingtvarshin/snowcode-deployer.git"
